<resources>
    <string name="app_name">Doctors Appoinment System</string>
    <string name="splash_blob">splash blob</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="or">Or</string>
    <string name="signup">SignUp</string>
    <string name="if_you_don_t_have_an_account_click_here">If you don\'t have an account, click here</string>
    <string name="sign_up">Sign Up</string>
    <string name="did_you_have_an_account_click_here">Did you have an account? click here</string>
    <string name="name">Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_category">Category</string>
    <string name="cook_like_a_pro_with_n_our_expertly_crafted_recipes">Cook like a pro with\n our expertly crafted recipes</string>
    <string name="your_favorites_meal_here">Your favorites Meal Here</string>
    <string name="search_your_favourite_recipe">Search your favourite Recipe</string>
    <string name="populars_recipes">Populars Recipes</string>

    <string name="start">Open</string>
    <string name="close">Close</string>
    <string name="profile">Profile\n</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="see_more">See More</string>
    <string name="take_your_taste_buds_non_a_flavor_journey_with_us">Take your taste buds\non a flavor journey with us</string>
    <string name="category_name">Category Name</string>
    <string name="user_name">User Name</string>
    <string name="developer_email">Developer Email</string>
    <string name="forgot_password" />
    <string name="click_to_login">Click To Login</string>
    <string name="register_here">Register Here</string>
    <string name="welcome_to_login_here">Welcome To Login Here</string>
    <string name="share_your_nmasterpiece_with_the_world">Share your \nmasterpiece with the world</string>
    <string name="share_your_nmasterpiece_with_the_worlds">Share your \nmasterpiece with the world</string>
    <string name="share_your_n_masterpices_with_the_worls">Share your \n masterpices with the worls</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="calories">Calories</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="share_your_magic_n_masterpiece_with_the_world">Share your magic\n masterpiece with the world</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="Category">Category</string>
    <string name="_120_calories">120 Calories</string>
    <string name="copyright_by_trodev_company">© copyright by trodev company</string>
    <string name="setting">Setting</string>
    <string name="satisfy_your_cravings_nwith_just_a_tap_recipe_app">Satisfy your cravings \nwith just a tap - Recipe App</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="view_more_app">View More App</string>
    <string name="feedback">Feedback</string>
    <string name="policy">Policy</string>
    <string name="sign_out">Sign Out</string>
    <string name="developer_name">Jubayer Hossain</string>
    <string name="developer_id">the_Jubayer Hossain</string>
    <string name="copyright_by_our_team">Copyright by our Team</string>
    <string name="share_add_all_doctor_s_here">Share add all doctor\'s here</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="here_all_of_ncategory_in_doctor_s">Here All of \ncategory in doctor\'s</string>
    <string name="welcome_to_our_doctor_nappointment_system_nhere_all_of_doctors_list">Welcome to our Doctor \nAppointment System. \nHere all of doctors list.</string>
    <string name="your_favourite_doctor_s_here">Your Favourite Doctor\'s here</string>
    <string name="populars_doctor_s">Populars Doctor\'s</string>
    <string name="search_your_favourite_doctor">Search your favourite doctor</string>
    <string name="about_us_of_our_system">About us of our system</string>
    <string name="copyright_by_our_teams">© Copyright by our team</string>
    <string name="satisfy_with_us_and_tap_a_ndoctor_s_appointment_system">Satisfy with us and Tap a \nDoctor\'s Appointment System</string>
    <string name="update_doctor">Update Doctor</string>
    <string name="introduction_n_n_this_policy_and_privacy_statement_explains_how_we_collect_use_and_protect_your_personal_information_when_you_use_our_doctors_appointment_system_android_app_n">Introduction:\n\n This policy and privacy statement explains how we collect, use, and protect your personal information when you use our Doctors Appointment System Android App.\n</string>
    <string name="information_we_collect_n_n_we_collect_the_following_information_from_you_when_you_use_our_app_n_n1_personal_information_this_includes_your_name_email_address_phone_number_and_date_of_birth_n2_medical_information_this_includes_your_medical_history_medications_and_other_health_related_information_n3_device_information_this_includes_your_device_s_id_and_device_type_n_n">Information We Collect\n\n We collect the following information from you when you use our app:\n\n1. Personal information: This includes your name, email address, phone number, and date of birth.\n2. Medical information: This includes your medical history, medications, and other health-related information.\n3. Device information: This includes your device\'s ID, and device type.\n\n</string>
    <string name="how_we_use_your_information_n_n_we_use_your_information_to_n_1_provide_you_with_our_services_such_as_scheduling_appointments_and_managing_your_medical_records_n2_communicate_with_you_about_your_appointments_and_other_important_information_n3_improve_our_app_and_services_n4_protect_against_fraud_and_abuse_n_n">How We Use Your Information\n\n We use your information to:\n1. Provide you with our services, such as scheduling appointments and managing your medical records.\n2. Communicate with you about your appointments and other important information.\n3. Improve our app and services.\n4. Protect against fraud and abuse.\n\n</string>
    <string name="data_security_n_n_we_take_steps_to_protect_your_information_from_unauthorized_access_use_or_disclosure_we_use_industry_standard_encryption_to_protect_your_data_when_it_is_transmitted_and_at_rest_we_also_have_security_measures_in_place_to_protect_our_servers_and_computer_systems_from_unauthorized_access_n_n">Data Security\n\n We take steps to protect your information from unauthorized access, use, or disclosure. We use industry-standard encryption to protect your data when it is transmitted and at rest. We also have security measures in place to protect our servers and computer systems from unauthorized access.\n\n</string>
    <string name="changes_to_this_policy_n_n_we_may_update_this_policy_from_time_to_time_if_we_make_any_significant_changes_we_will_notify_you_by_email_n_n">Changes to This Policy\n\n We may update this policy from time to time. If we make any significant changes, we will notify you by email.\n\n</string>
    <string name="contact_us_n_nif_you_have_any_questions_about_this_policy_or_our_privacy_practices_please_contact_us_n">Contact Us\n\nIf you have any questions about this policy or our privacy practices, please contact us.\n</string>
    <string name="developer_jubayer_hossain_ncontact_number_01758860911_n_n">Developer: Jubayer Hossain\nContact Number: 01758860911\n\n</string>
    <string name="effective_date_n_n_this_policy_is_effective_as_of_october_31_2023_n_n">Effective Date\n\n This policy is effective as of October 31, 2023.\n\n</string>
</resources>