<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:text="@string/satisfy_with_us_and_tap_a_ndoctor_s_appointment_system"
        android:textColor="@color/primaryDark"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearLayoutShare"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/primary" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_share"
                    app:tint="@color/primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/share_app"
                    android:textColor="@color/primary" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearLayoutRate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/primary" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_rate"
                    app:tint="@color/primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rate_app"
                    android:textColor="@color/primary" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearLayoutMore"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/primary" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_more"
                    app:tint="@color/primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/view_more_app"
                    android:textColor="@color/primary" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearLayoutFeedback"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/primary" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_feedback"
                    app:tint="@color/primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/feedback"
                    android:textColor="@color/primary" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearLayoutPolicy"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/primary" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_policy"
                    app:tint="@color/primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/policy"
                    android:textColor="@color/primary" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        android:id="@+id/btn_logout"
        android:text="@string/sign_out"
        android:textColor="@color/black"
        android:background="@drawable/round_back_primary_100"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>